hard-gists/356294/run.log
=== Docker Run Log for 356294 ===
Started at: Mi 29. Okt 13:54:51 CET 2025

[2025-10-29 13:54:51] START: Running container for 356294
[2025-10-29 13:54:51] SUCCESS: Container 21bea554d370d521b75581598e11b3550cf008027edf458254a5146e8181782e started for 356294
=== Container logs for 356294 ===
  File "/snippet.py", line 151
    print "Player 1 scored"
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 356294 ===
[2025-10-29 13:54:53] INFO: Container 21bea554d370d521b75581598e11b3550cf008027edf458254a5146e8181782e has stopped
